--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+html * {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav {
+  background-color: #ccc;
+  padding: 1em 2em;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+nav a {
+  margin-right: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav a.active {
+  color: red;
+}
+
+.input {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 10px;
+  width: 180px;
 }
 
-.App-link {
-  color: #61dafb;
+.tarjeta {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tarjeta p {
+  margin-right: 20px;
+}
+
+.hero {
+  width: 100%;
+  height: 50vh;
+  background-color: blue;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  padding: 3em 4em;
+  gap: 20px
+}
+
+.card {
+  width: 100%;
+  height: 150px;
+  border-radius: 10px;
+  background-color: black;
+}
+
+.products {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+
+}
+
+.product {
+  width: 100%;
+  height: 200px;
+  background-color: green;
+  margin: 5px;
+
+}
+
+.products,
+.cards {
+  padding-top: 3em;
 }
